syntax = "proto3";

message Job {
    bytes payload = 1;
    string trace_id = 2;
}
