syntax = "proto3";

message Message {
    message Login {
        string secret_url = 1;
    }
    message CreatePassword {
        string secret_url = 1;
    }
    message ResetPassword {
        string secret_url = 1;
    }
    message TalkRecordingReady {
        string talk_url = 1;
        string confa_url = 2;
        string confa_title = 3;
        string talk_title = 4;
    }
    oneof message {
        Login login = 1;
        CreatePassword create_password = 2;
        ResetPassword reset_password = 3;
        TalkRecordingReady talk_recording_ready = 4;
    }
}

message Delivery {
    message Auto {
        bytes user_id = 1;    
    }
    message Email {
        string to_address = 1;
    }

    oneof delivery {
        Auto auto = 1;
        Email email = 2;
    }
}

message Send {
    Message message = 1;
    Delivery delivery = 2; 
}
